# autonomous_trading_system

./: .gitignore  Multi-Broker Plan.docx  README.md  Road to Multiboker.docx  System Overview.docx  create_directory_structure.bat  create_package_structure.bat  data_format_diagnostic.py  debug_import.py  debug_portfolio.py  example_usage.py  fix_json_error.py  migrate.py  paper_trading_dashboard.py  paper_trading_launcher.py  paper_trading_system.py  pyproject.toml  requirements.txt  sophisticated_paper_trading.py  test.py  test_oanda_api.py  test_parser_fix.py  validation_report_20250708_181345.json  validation_report_20250708_181408.json  validation_report_20250708_181504.json  validation_report_20250708_181541.json  validation_report_20250708_181651.json  validation_report_20250708_182004.json  ~$ad to Multiboker.docx  ~$lti-Broker Plan.docx
docker/: docker-compose.yml
src/: main.py
src/autonomous_trading_system/: crew.py  crew_backup.py  main.py  trading_dashboard.py
src/backtesting/: backtesting_simulation_tools.py  enhanced_agent_backtest.py  enhanced_backtest_integration.py  enhanced_backtest_metrics.py  monitored_backtest.py  real_backtest_runner.py  real_data_monitored_backtest.py  test_monitored_backtest.py  test_script.py
src/config/: logging_config.py
src/dashboard/: README_paper_trading.md  paper_trading_dashboard.py  (+2 more)
tests/: backtest_analysis_EUR_USD_1751155127.9366345.md  backtest_analysis_EUR_USD_1751155409.9105372.md  real_backtest_runner.py  real_backtest_runner_og.py  simple_backtest_test.py  test_backtesting_orchestrator.py
(+54 files in other folders)
